--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "mocha-vite-puppeteer",
-  "version": "0.1.0",
+  "version": "1.0.0",
+  "type": "module",
   "description": "Run your Mocha tests with Vite bundler and Puppeteer",
   "bin": "cli.js",
   "dependencies": {
