--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "mocha": "^9.0.2",
     "puppeteer": "^10.1.0",
     "stdio": "^2.1.1",
-    "vite": "^2.1.0"
+    "vite": "^2.1.0",
+    "vite-plugin-istanbul": "^2.2.0"
   },
   "scripts": {
     "prepare": "npm run prepare:app && npm run prepare:performance && npm run prepare:unit",
@@ -38,6 +39,7 @@
   },
   "homepage": "https://github.com/larsthorup/mocha-vite-puppeteer#readme",
   "devDependencies": {
+    "nyc": "^15.1.0",
     "vite-plugin-inspect": "^0.3.7"
   }
 }
