--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mocha-vite-puppeteer",
-  "version": "1.12.0",
+  "version": "2.0.0-beta.1",
   "type": "module",
   "description": "Run your Mocha tests with Vite bundler and Puppeteer",
   "bin": {
